Fix insecure code detected by Netlify

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: |+
   This website contains my opinions, writtings, tutorials or whatever I consider
   it worth to be written.
 baseurl: ""
-url: "http://farv.github.io/"
+url: "https://farv.github.io"
 twitter_username: Pacobo
 github_username:  Farv
 
